# alcelin

./: .gitmodules  CMakeLists.txt  Changelog.md  Guidelines.md  Readme.md  doxygen-custom-header.html
cmake/: alcelin.pc.in  alcelin_config.cmake
examples/: CMakeLists.txt  Readme.md
examples/cc/: boundless_containers.cpp  enumerated_array.cpp
examples/cu/: arithmetics.cpp  boundless_containers.cpp  enumerated_array.cpp
examples/file/: file_utilized.cpp
examples/sm/: arithmetics.cpp  formatter.cpp  to_string.cpp
include/: alcelin.hpp  alcelin_ansi_escape_codes.hpp  alcelin_argument_parser.hpp  alcelin_config.hpp.in  alcelin_container_utilities.hpp  alcelin_custom_containers.hpp  alcelin_file_utilities.hpp  alcelin_property.hpp  alcelin_string_manipulators.hpp
src/: alcelin.cpp  argument_parser.cpp
tests/: CMakeLists.txt  test_aec.cpp  test_ap.cpp  test_cc.cpp  test_cu.cpp  test_cu_containers.cpp  test_file.cpp  test_prop.cpp  test_sm.cpp  test_to_string.cpp  tester.cpp
tests/test_ap/: test_ap.hpp  test_ap_0.cpp  test_ap_1.cpp  test_ap_10.cpp  test_ap_11.cpp  test_ap_12.cpp  test_ap_2.cpp  test_ap_3.cpp  test_ap_4.cpp  test_ap_5.cpp  test_ap_6.cpp  test_ap_7.cpp  test_ap_8.cpp  test_ap_9.cpp
